# nea_real

./: -- SQLite.sql  .gitignore  main.py  pyproject.toml  test_databases.py
website/: __init__.py  auth.py  class_info.py  classes.py  models.py  simulator.py  sn.py  tests.py  views.py
website/static/: kg-lib.js
website/templates/: assignments.html  base.html  class.html  class_chat.html  class_detail.html  create_assignment.html  create_class.html  create_question_set.html  flashcards.html  home.html  join_classes.html  login.html  my_classes.html  news.html  question_sets.html  questions.html  sign_up.html  simulator.html  stats.html
